--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs-extra": "^11.1.1",
     "mongoose": "^7.0.0",
     "mysql": "^2.18.1",
     "pako": "^2.1.0"
